#61815 Fixed card layout activity type name overlapping issue on activity card in editing mode

--- a/scss/card-layout.scss
+++ b/scss/card-layout.scss
@@ -10,6 +10,7 @@
                     right: 0.5rem;
                 }
                 .wdm-mod-name {
+                    padding-right: 10rem;
                     margin-bottom: 1.5rem !important;
                 }
             }
